# KMDb

./: .coveragerc  README.md  coverage.txt  manage.py  pyproject.toml  report.txt
accounts/: serializers.py  urls.py  views.py
kmdb/: settings.py  test_api.py  urls.py
movies/: models.py  permissions.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
